Fix footer on IE.

--- a/style/main.scss
+++ b/style/main.scss
@@ -278,7 +278,6 @@ p {
 
 .siteFooter {
     background: #2B6990;
-    flex: 1;
     font-size: 1rem;
     padding: 1rem;
     text-align: right;
